Fix loader not showing fully on the button

--- a/src/pages/app.module.scss
+++ b/src/pages/app.module.scss
@@ -178,7 +178,7 @@
       button {
         border: 0px;
         border-radius: 6px;
-        height: max(3vh, 24px);
+        height: 32px;
         margin-top: 3vh;
         font-weight: 600;
         font-size: 16px;
